styles/montrehack.css
body {
  margin: 0;
  padding: 0;
  background: #151515 url("images/bkg.png") 0 0;
  color: #eaeaea;
  line-height: 1.5;
  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
}

h1, h2, h3, h4, h5, h6 {
  margin: 0 0 20px;
}

li {
  line-height: 1.4 ;
}

div.slide h1 {
  font-weight: bold;
  letter-spacing: -1px;
  text-shadow: 0 0 5px rgba(104, 182, 255, 0.5);
  -webkit-font-smoothing: antialiased;
}

h1:before {
  content: "./ ";
}


h1, h2, h3, h4, h5, h6 {
  font-weight: normal;
  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
  color: #b5e853;
  letter-spacing: -0.03em;
  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
               0 0 5px rgba(181, 232, 83, 0.1),
               0 0 10px rgba(181, 232, 83, 0.1);
}

dt {
  font-style: italic;
  font-weight: bold;
}

ul li {
  list-style: none;
}

ul li:before {
  content: ">>";
  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
  font-size: 16pt;
  color: #b5e853;
  margin-left: -20px;
  margin-right: 0.2em;
  line-height: 16px;
}

/* Links
   a, a:hover, a:visited
*/

a {
  color: #63c0f5;
  text-shadow: 0 0 5px rgba(104, 182, 255, 0.5);
}

/* 
 * overriding slidy's
 */
/* forcing color */
.slide ul > li > * {
  color: #eaeaea;
}
/* readable prompt */
div.initial_prompt {
  color: #eaeaea;
}

/* The following were untested and will probably need some adjustment */
blockquote {
  color: #aaa;
  padding-left: 10px;
  border-left: 1px dotted #666;
}

pre {
  background: rgba(0, 0, 0, 0.9);
  border: 1px solid rgba(255, 255, 255, 0.15);
  padding: 10px;
  font-size: 14px;
  color: #b5e853;
  border-radius: 2px;
  -moz-border-radius: 2px;
  -webkit-border-radius: 2px;
  text-wrap: normal;
  overflow: auto;
  overflow-y: hidden;
}

table {
  width: 100%;
  margin: 0 0 20px 0;
}

th {
  text-align: left;
  border-bottom: 1px dashed #b5e853;
  padding: 5px 10px;
}

td {
  padding: 5px 10px;
}

hr {
  height: 0;
  border: 0;
  border-bottom: 1px dashed #b5e853;
  color: #b5e853;
}

